[package]
name = "pallet-rewards"
version = "0.1.0"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition.workspace = true
license = "0BSD"
homepage = "https://subspace.network"
repository = "https://github.com/autonomys/subspace"
description = "Pallet for issuing rewards to block producers"
readme = "README.md"
include = [
    "/src",
    "/Cargo.toml",
    "/README.md",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
log.workspace = true
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["alloc", "derive"] }
sp-core.workspace = true
sp-runtime.workspace = true
subspace-runtime-primitives.workspace = true

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
sp-io.workspace = true

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "scale-info/std",
    "serde/std",
    "sp-core/std",
    "sp-runtime/std",
    "subspace-runtime-primitives/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-benchmarking/runtime-benchmarks",
]
